gather: Add new log details

--- a/uldir_raid_analysis.ipynb
+++ b/uldir_raid_analysis.ipynb
@@ -4686,33 +4686,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>JTrPMkjvCH6NtR7x</td>\n",
-       "      <td>1538619012152</td>\n",
-       "      <td>1538629050059</td>\n",
+       "      <td>WLBzQp3jVR2q4trJ</td>\n",
+       "      <td>1539828002713</td>\n",
+       "      <td>1539837571342</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ybXw42Q1JWgKmaY3</td>\n",
-       "      <td>1538540786600</td>\n",
-       "      <td>1538541597090</td>\n",
+       "      <td>T3z8bj7yJxXwKDGL</td>\n",
+       "      <td>1539747081251</td>\n",
+       "      <td>1539752036015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>fK7dCTJBknH64Xpz</td>\n",
-       "      <td>1538538505824</td>\n",
-       "      <td>1538540153246</td>\n",
+       "      <td>HQBfXNr6kqhP4dm1</td>\n",
+       "      <td>1539741497614</td>\n",
+       "      <td>1539747081107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>YQ7hMmRW1AN8xkJa</td>\n",
-       "      <td>1538532185123</td>\n",
-       "      <td>1538537789201</td>\n",
+       "      <td>tHNxkTaqBACbzKnd</td>\n",
+       "      <td>1539483552654</td>\n",
+       "      <td>1539485564473</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>RNq3d6kZcAbtfhzx</td>\n",
-       "      <td>1538100085678</td>\n",
-       "      <td>1538110351322</td>\n",
+       "      <td>Vg9KncM4fFbRT6BD</td>\n",
+       "      <td>1539309705296</td>\n",
+       "      <td>1539320489557</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4720,11 +4720,11 @@
       ],
       "text/plain": [
        "             log_id      log_start        log_end\n",
-       "0  JTrPMkjvCH6NtR7x  1538619012152  1538629050059\n",
-       "1  ybXw42Q1JWgKmaY3  1538540786600  1538541597090\n",
-       "2  fK7dCTJBknH64Xpz  1538538505824  1538540153246\n",
-       "3  YQ7hMmRW1AN8xkJa  1538532185123  1538537789201\n",
-       "4  RNq3d6kZcAbtfhzx  1538100085678  1538110351322"
+       "0  WLBzQp3jVR2q4trJ  1539828002713  1539837571342\n",
+       "1  T3z8bj7yJxXwKDGL  1539747081251  1539752036015\n",
+       "2  HQBfXNr6kqhP4dm1  1539741497614  1539747081107\n",
+       "3  tHNxkTaqBACbzKnd  1539483552654  1539485564473\n",
+       "4  Vg9KncM4fFbRT6BD  1539309705296  1539320489557"
       ]
      },
      "execution_count": 4,
@@ -4753,14 +4753,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating file JTrPMkjvCH6NtR7x\n",
-      "Creating file ybXw42Q1JWgKmaY3\n",
-      "Creating file fK7dCTJBknH64Xpz\n",
-      "Creating file YQ7hMmRW1AN8xkJa\n",
-      "Creating file RNq3d6kZcAbtfhzx\n",
-      "Creating file NyMK6RVGtqaXH8wx\n",
-      "Creating file bKHF3fdQCJqGZzPt\n",
-      "Creating file dHMk9Czm4GWRF8Tx\n",
+      "Creating file WLBzQp3jVR2q4trJ\n",
+      "Creating file T3z8bj7yJxXwKDGL\n",
+      "Creating file HQBfXNr6kqhP4dm1\n",
+      "Creating file tHNxkTaqBACbzKnd\n",
+      "Creating file Vg9KncM4fFbRT6BD\n",
+      "Creating file 4zpRXjQA3Fhg9KdJ\n",
+      "Creating file KmVAr4DMhcvFjb3L\n",
+      "Creating file MnCH4QzrJDKBW31A\n",
+      "Creating file FQwrJhRb2dypT6PC\n",
+      "Creating file RTPZbtGLyBHpQhMa\n",
       "\n",
       "All files created.\n",
       "\n"
@@ -4872,20 +4874,30 @@
      "output_type": "stream",
      "text": [
       "Log ID 4mzCD2x9hnqZb3KG done.\n",
+      "Log ID 4zpRXjQA3Fhg9KdJ done.\n",
       "Log ID ArVhTvdPmLf9JHjR done.\n",
       "Log ID bKHF3fdQCJqGZzPt done.\n",
       "Log ID dgkHRTaMQGJ7Zm3C done.\n",
       "Log ID dHMk9Czm4GWRF8Tx done.\n",
       "Log ID dV3RWaQchfv9zT64 done.\n",
       "Log ID fK7dCTJBknH64Xpz done.\n",
+      "Log ID FQwrJhRb2dypT6PC done.\n",
+      "Log ID HQBfXNr6kqhP4dm1 done.\n",
       "Log ID Jd2kb7C9PncfqN1v done.\n",
       "Log ID JTrPMkjvCH6NtR7x done.\n",
       "Log ID kgfWrMTP93417Yja done.\n",
       "Log ID kKrTnBRXgtW3aJHw done.\n",
+      "Log ID KmVAr4DMhcvFjb3L done.\n",
+      "Log ID MnCH4QzrJDKBW31A done.\n",
       "Log ID nCLBA4NJHkKmzM37 done.\n",
       "Log ID NyMK6RVGtqaXH8wx done.\n",
       "Log ID PphkwMFDnmRgK37y done.\n",
       "Log ID RNq3d6kZcAbtfhzx done.\n",
+      "Log ID RTPZbtGLyBHpQhMa done.\n",
+      "Log ID T3z8bj7yJxXwKDGL done.\n",
+      "Log ID tHNxkTaqBACbzKnd done.\n",
+      "Log ID Vg9KncM4fFbRT6BD done.\n",
+      "Log ID WLBzQp3jVR2q4trJ done.\n",
       "Log ID ybXw42Q1JWgKmaY3 done.\n",
       "Log ID YQ7hMmRW1AN8xkJa done.\n",
       "\n",
