gather: Add missing players to player_list

--- a/uldir_guild_awards.ipynb
+++ b/uldir_guild_awards.ipynb
@@ -1036,6 +1036,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Petrol', 'Illestra', 'Tawn', 'Liavre', 'Shadowbaine', 'Metonymy',\n",
+       "       'Draigo', 'Psychodruid', 'Kopyelock', 'Mythrose', 'Brian', 'Sumi',\n",
+       "       'Vaelyra', 'Katanescence', 'Acturus', 'Toy', 'Ayriea', 'Jampers',\n",
+       "       'Earrl', 'Grombrindal', 'Velryssa', 'Vampyric', 'Cagliostro',\n",
+       "       'Dough', 'Stradlock', 'Uuglei', 'Kiwisoda', 'Noraela', 'Katheals',\n",
+       "       'Invinceble', 'Brassi', 'Humanraptor', 'Czef', 'Quasilloyd',\n",
+       "       'Oakinon', 'Heavenlylite'], dtype=object)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check all players added\n",
+    "fight_df.player_name.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Missing two player adds: \n",
+    "1. Kiwisoda as main\n",
+    "2. Katheals as alt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_alts('Katanescence', 'Katheals', player_list)\n",
+    "\n",
+    "new_players = pd.DataFrame([\n",
+    "    {'player': 'Kiwisoda', \n",
+    "     'primary_role': 'rdps', \n",
+    "     'alt': np.nan,\n",
+    "     'tier_end': True,\n",
+    "     'tier_start': False,\n",
+    "     'start_date': 'Oct-23-18'}], \n",
+    "    columns=['player', 'primary_role', 'alt', \n",
+    "             'tier_end', 'tier_start', 'start_date'])\n",
+    "\n",
+    "player_list = pd.concat([player_list, new_players])\n",
+    "\n",
+    "# Test\n",
+    "assert player_list.alt.count() == 5\n",
+    "assert player_list.shape[0] == 28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update player list\n",
+    "player_list.to_csv('player_list.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
