refactor: Include initial extraction code in notebook

--- a/uldir_guild_awards.ipynb
+++ b/uldir_guild_awards.ipynb
@@ -7,8 +7,9 @@
     "# Uldir Guild Awards Analysis\n",
     "\n",
     "<ul>\n",
-    "<li><a href=\"#Taloc\">Taloc</a></li>\n",
-    "<li><a href=\"#MOTHER\">MOTHER</a></li>\n",
+    "<li><a href=\"#collect\">Collect Analysis Data</a></li>\n",
+    "<li><a href=\"#taloc\">Taloc</a></li>\n",
+    "<li><a href=\"#mother\">MOTHER</a></li>\n",
     "<li><a href=\"#zekvoz\">Zek'voz</a>\n",
     "<li><a href=\"#vectis\">Vectis</a>\n",
     "<li><a href=\"#fetid\">Fetid</a>\n",
@@ -1103,6 +1104,281 @@
    "source": [
     "# Update player list\n",
     "player_list.to_csv('player_list.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='collect'></a>\n",
+    "## Collect Analysis Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "All files created.\n",
+      "\n",
+      "Log ID 1rnktHXvcTWD2JzL done.\n",
+      "Log ID 4mzCD2x9hnqZb3KG done.\n",
+      "Log ID 4zpRXjQA3Fhg9KdJ done.\n",
+      "Log ID 6JMd2cmzFk8Qa1gj done.\n",
+      "Log ID 81HkLmCMRdAg6rNJ done.\n",
+      "Log ID 96XVRq3ZJ2pGk1YC done.\n",
+      "Log ID 9t1JjYfvbZkyWCGP done.\n",
+      "Log ID ac1rQnYvZWRjypVD done.\n",
+      "Log ID agwcpfjKbLTHrd1W done.\n",
+      "Log ID ArqaVzbYtW7BG2Cx done.\n",
+      "Log ID ArVhTvdPmLf9JHjR done.\n",
+      "Log ID bKHF3fdQCJqGZzPt done.\n",
+      "Log ID d3P97v4DpLHmyZkW done.\n",
+      "Log ID dgkHRTaMQGJ7Zm3C done.\n",
+      "Log ID dHMk9Czm4GWRF8Tx done.\n",
+      "Log ID dV3RWaQchfv9zT64 done.\n",
+      "Log ID DycbAK6f1PL7Wpkd done.\n",
+      "Log ID FGhKD9AmjVpRMYw2 done.\n",
+      "Log ID fK7dCTJBknH64Xpz done.\n",
+      "Log ID FQwrJhRb2dypT6PC done.\n",
+      "Log ID GbryNmfD98zcH6Jn done.\n",
+      "Log ID gcfCXbY14qDyhZtv done.\n",
+      "Log ID GdR1r6pVwA9TWXbJ done.\n",
+      "Log ID Hg83cdfhJaLyp6rG done.\n",
+      "Log ID HQBfXNr6kqhP4dm1 done.\n",
+      "Log ID jaqf6V3Q4vNmDFdR done.\n",
+      "Log ID Jd2kb7C9PncfqN1v done.\n",
+      "Log ID JgqKCkP7p3nAd1Ha done.\n",
+      "Log ID JTrPMkjvCH6NtR7x done.\n",
+      "Log ID k3LJpfYV1Nv2t8zq done.\n",
+      "Log ID kgfWrMTP93417Yja done.\n",
+      "Log ID kKrTnBRXgtW3aJHw done.\n",
+      "Log ID KmVAr4DMhcvFjb3L done.\n",
+      "Log ID MnCH4QzrJDKBW31A done.\n",
+      "Log ID mPaDJCdt4rWQkA7V done.\n",
+      "Log ID nCLBA4NJHkKmzM37 done.\n",
+      "Log ID nqKDNkYjg9hzTwL6 done.\n",
+      "Log ID nxf6krQP8Bvty9V2 done.\n",
+      "Log ID NyMK6RVGtqaXH8wx done.\n",
+      "Log ID PphkwMFDnmRgK37y done.\n",
+      "Log ID PYArFRQJ9MCT6jXy done.\n",
+      "Log ID rMPLdKwCcH78Yz9q done.\n",
+      "Log ID RNq3d6kZcAbtfhzx done.\n",
+      "Log ID rTPDJGpVXFZwNkA7 done.\n",
+      "Log ID RTPZbtGLyBHpQhMa done.\n",
+      "Log ID rVcMgwvmPfDHYZ1a done.\n",
+      "Log ID T3z8bj7yJxXwKDGL done.\n",
+      "Log ID T7xMvwtyG9YaP6k3 done.\n",
+      "Log ID tHNxkTaqBACbzKnd done.\n",
+      "Log ID V8Nd6ntR4PZMmLQW done.\n",
+      "Log ID Vg9KncM4fFbRT6BD done.\n",
+      "Log ID VJQh2mdxkYypc196 done.\n",
+      "Log ID VkQfpqZHB419zDcr done.\n",
+      "Log ID vTWVFQfwcHztbnKL done.\n",
+      "Log ID WLBzQp3jVR2q4trJ done.\n",
+      "Log ID ybXw42Q1JWgKmaY3 done.\n",
+      "Log ID YQ7hMmRW1AN8xkJa done.\n",
+      "\n",
+      "Dataframe created.\n",
+      "\n",
+      "Dataframe cleaned.\n",
+      "\n",
+      "Master dataframe created.\n",
+      "\n",
+      "master_list saved.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>log_id</th>\n",
+       "      <th>log_start</th>\n",
+       "      <th>log_end</th>\n",
+       "      <th>pull_id</th>\n",
+       "      <th>pull_start</th>\n",
+       "      <th>pull_end</th>\n",
+       "      <th>boss_id</th>\n",
+       "      <th>boss_name</th>\n",
+       "      <th>difficulty</th>\n",
+       "      <th>kill</th>\n",
+       "      <th>player_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1rnktHXvcTWD2JzL</td>\n",
+       "      <td>1542337560501</td>\n",
+       "      <td>1542344234987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59280</td>\n",
+       "      <td>241585</td>\n",
+       "      <td>2135</td>\n",
+       "      <td>Mythrax</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Petrol</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1rnktHXvcTWD2JzL</td>\n",
+       "      <td>1542337560501</td>\n",
+       "      <td>1542344234987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59280</td>\n",
+       "      <td>241585</td>\n",
+       "      <td>2135</td>\n",
+       "      <td>Mythrax</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Illestra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1rnktHXvcTWD2JzL</td>\n",
+       "      <td>1542337560501</td>\n",
+       "      <td>1542344234987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59280</td>\n",
+       "      <td>241585</td>\n",
+       "      <td>2135</td>\n",
+       "      <td>Mythrax</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Tawn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1rnktHXvcTWD2JzL</td>\n",
+       "      <td>1542337560501</td>\n",
+       "      <td>1542344234987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59280</td>\n",
+       "      <td>241585</td>\n",
+       "      <td>2135</td>\n",
+       "      <td>Mythrax</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Liavre</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1rnktHXvcTWD2JzL</td>\n",
+       "      <td>1542337560501</td>\n",
+       "      <td>1542344234987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59280</td>\n",
+       "      <td>241585</td>\n",
+       "      <td>2135</td>\n",
+       "      <td>Mythrax</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Shadowbaine</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             log_id      log_start        log_end  pull_id  pull_start  \\\n",
+       "0  1rnktHXvcTWD2JzL  1542337560501  1542344234987        1       59280   \n",
+       "1  1rnktHXvcTWD2JzL  1542337560501  1542344234987        1       59280   \n",
+       "2  1rnktHXvcTWD2JzL  1542337560501  1542344234987        1       59280   \n",
+       "3  1rnktHXvcTWD2JzL  1542337560501  1542344234987        1       59280   \n",
+       "4  1rnktHXvcTWD2JzL  1542337560501  1542344234987        1       59280   \n",
+       "\n",
+       "   pull_end  boss_id boss_name  difficulty   kill  player_name  \n",
+       "0    241585     2135   Mythrax           5  False       Petrol  \n",
+       "1    241585     2135   Mythrax           5  False     Illestra  \n",
+       "2    241585     2135   Mythrax           5  False         Tawn  \n",
+       "3    241585     2135   Mythrax           5  False       Liavre  \n",
+       "4    241585     2135   Mythrax           5  False  Shadowbaine  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import key and player list\n",
+    "api_key = api_key.key\n",
+    "player_list = pd.read_csv('player_list.csv')\n",
+    "\n",
+    "# Collect guild info\n",
+    "guild_info = wl.GUILD_INFO\n",
+    "\n",
+    "# Extract logs\n",
+    "log_info = wl.get_logs(api_key, guild_info, log_start=1536202744238)\n",
+    "wl.save_logs(log_info, api_key, guild_info, log_start=1536202744238)\n",
+    "\n",
+    "# Create boss list\n",
+    "boss_list = ['Taloc', \n",
+    "             'MOTHER', \n",
+    "             'Fetid Devourer', \n",
+    "             \"Zek'voz\", \n",
+    "             'Vectis',\n",
+    "             'Zul', \n",
+    "             'Mythrax', \n",
+    "             \"G'Huun\"]\n",
+    "\n",
+    "# Extract fight details and save\n",
+    "fight_df = wl.extract_fights(boss_list)\n",
+    "wl.create_master_list(log_info, fight_df)\n",
+    "\n",
+    "master_list = pd.read_csv('master_list.csv')\n",
+    "master_list = master_list[master_list.difficulty == 5] # Get mythic only\n",
+    "master_list.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='taloc'></a>\n",
+    "## Taloc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Blood Storm: 270290"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Damage done by Blood Storm\n",
+    "taloc = wl.damage_taken(api_key, lo)"
    ]
   },
   {
