fix: Update G'huun boss name

--- a/uldir_guild_awards.ipynb
+++ b/uldir_guild_awards.ipynb
@@ -1216,7 +1216,7 @@
     "             'Vectis',\n",
     "             'Zul', \n",
     "             'Mythrax', \n",
-    "             \"G'Huun\"]\n",
+    "             \"G'huun\"]\n",
     "\n",
     "# Extract fight details and save\n",
     "fight_df = wl.extract_fights(boss_list)\n",
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1263,32 +1263,37 @@
        "      <td>Mythrax</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>497</th>\n",
+       "      <th>833</th>\n",
        "      <td>2136</td>\n",
        "      <td>Zek'voz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>877</th>\n",
+       "      <th>1213</th>\n",
        "      <td>2128</td>\n",
        "      <td>Fetid Devourer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1077</th>\n",
+       "      <th>1413</th>\n",
        "      <td>2145</td>\n",
        "      <td>Zul</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2136</th>\n",
+       "      <th>2332</th>\n",
+       "      <td>2122</td>\n",
+       "      <td>G'huun</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3670</th>\n",
        "      <td>2144</td>\n",
        "      <td>Taloc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2156</th>\n",
+       "      <th>3690</th>\n",
        "      <td>2141</td>\n",
        "      <td>MOTHER</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2196</th>\n",
+       "      <th>3730</th>\n",
        "      <td>2134</td>\n",
        "      <td>Vectis</td>\n",
        "    </tr>\n",
@@ -1299,15 +1304,16 @@
       "text/plain": [
        "      boss_id       boss_name\n",
        "0        2135         Mythrax\n",
-       "497      2136         Zek'voz\n",
-       "877      2128  Fetid Devourer\n",
-       "1077     2145             Zul\n",
-       "2136     2144           Taloc\n",
-       "2156     2141          MOTHER\n",
-       "2196     2134          Vectis"
+       "833      2136         Zek'voz\n",
+       "1213     2128  Fetid Devourer\n",
+       "1413     2145             Zul\n",
+       "2332     2122          G'huun\n",
+       "3670     2144           Taloc\n",
+       "3690     2141          MOTHER\n",
+       "3730     2134          Vectis"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7267,6 +7273,22 @@
     "la.collect_stats(data=annihilation, master_list=master_list, player_list=player_list, \n",
     "                 boss_name=\"Mythrax\", boss_id=2135, spell_name='Annihilation', \n",
     "                 analysis_columns=['uses'], min_attempts=50, bins=bins)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='ghuun'></a>\n",
+    "## G'Huun"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gaze of G'Huun\n",
+    "ID: 267700"
    ]
   },
   {
