eda: Complete G'huun pair dunk analysis

--- a/uldir_guild_awards.ipynb
+++ b/uldir_guild_awards.ipynb
@@ -8286,11 +8286,495 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Power Matrix Dunk\n",
+    "ID: 263372"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting details for log 9t1JjYfvbZkyWCGP\n",
+      "Player added: Psychodruid\n",
+      "Player added: Vaelyra\n",
+      "Player added: Velryssa\n",
+      "Player added: Earrl\n",
+      "Player added: Draigo\n",
+      "Player added: Tawn\n",
+      "Player added: Grombrindal\n",
+      "Player added: Ayriea\n",
+      "Player added: Brian\n",
+      "Player added: Velsummers\n",
+      "Player added: Kopyelock\n",
+      "Player added: Shadowbaine\n",
+      "Player added: Stradlock\n",
+      "Player added: Petrol\n",
+      "Player added: Vampyric\n",
+      "Player added: Illestra\n",
+      "Player added: Metonymy\n",
+      "Collecting details for log ac1rQnYvZWRjypVD\n",
+      "Player added: Velsummers\n",
+      "Player added: Earrl\n",
+      "Player added: Draigo\n",
+      "Player added: Metonymy\n",
+      "Player added: Psychodruid\n",
+      "Player added: Stradlock\n",
+      "Player added: Tawn\n",
+      "Player added: Shadowbaine\n",
+      "Player added: Grombrindal\n",
+      "Player added: Kopyelock\n",
+      "Player added: Vampyric\n",
+      "Player added: Velryssa\n",
+      "Player added: Ayriea\n",
+      "Player added: Illestra\n",
+      "Player added: Brian\n",
+      "Player added: Petrol\n",
+      "Collecting details for log GbryNmfD98zcH6Jn\n",
+      "Player added: Metonymy\n",
+      "Player added: Illestra\n",
+      "Player added: Grombrindal\n",
+      "Player added: Petrol\n",
+      "Player added: Earrl\n",
+      "Player added: Brian\n",
+      "Player added: Tawn\n",
+      "Player added: Kopyelock\n",
+      "Player added: Velryssa\n",
+      "Player added: Draigo\n",
+      "Player added: Vampyric\n",
+      "Player added: Velsummers\n",
+      "Player added: Shadowbaine\n",
+      "Player added: Vaelyra\n",
+      "Player added: Psychodruid\n",
+      "Player added: Ayriea\n",
+      "Collecting details for log Hg83cdfhJaLyp6rG\n",
+      "Player added: Kopyelock\n",
+      "Player added: Petrol\n",
+      "Player added: Tawn\n",
+      "Player added: Vaelyra\n",
+      "Player added: Draigo\n",
+      "Player added: Vampyric\n",
+      "Player added: Grombrindal\n",
+      "Player added: Velryssa\n",
+      "Player added: Brian\n",
+      "Player added: Metonymy\n",
+      "Player added: Illestra\n",
+      "Player added: Shadowbaine\n",
+      "Player added: Tawn\n",
+      "Player added: Stradlock\n",
+      "Player added: Psychodruid\n",
+      "Player added: Velsummers\n",
+      "Player added: Earrl\n",
+      "Player added: Uuglei\n",
+      "Player added: Ayriea\n",
+      "Collecting details for log JgqKCkP7p3nAd1Ha\n",
+      "Player added: Earrl\n",
+      "Player added: Illestra\n",
+      "Player added: Brian\n",
+      "Player added: Velsummers\n",
+      "Player added: Vaelyra\n",
+      "Player added: Metonymy\n",
+      "Player added: Ayriea\n",
+      "Player added: Draigo\n",
+      "Player added: Vampyric\n",
+      "Player added: Petrol\n",
+      "Player added: Shadowbaine\n",
+      "Player added: Grombrindal\n",
+      "Player added: Tawn\n",
+      "Player added: Psychodruid\n",
+      "Player added: Velryssa\n",
+      "Player added: Kopyelock\n",
+      "Collecting details for log k3LJpfYV1Nv2t8zq\n",
+      "Player added: Draigo\n",
+      "Player added: Metonymy\n",
+      "Player added: Velryssa\n",
+      "Player added: Vaelyra\n",
+      "Player added: Ayriea\n",
+      "Player added: Vampyric\n",
+      "Player added: Velsummers\n",
+      "Player added: Brian\n",
+      "Player added: Kopyelock\n",
+      "Player added: Illestra\n",
+      "Player added: Psychodruid\n",
+      "Player added: Petrol\n",
+      "Player added: Grombrindal\n",
+      "Player added: Shadowbaine\n",
+      "Player added: Earrl\n",
+      "Collecting details for log mPaDJCdt4rWQkA7V\n",
+      "Player added: Grombrindal\n",
+      "Player added: Kopyelock\n",
+      "Player added: Petrol\n",
+      "Player added: Shadowbaine\n",
+      "Player added: Draigo\n",
+      "Player added: Toy\n",
+      "Player added: Vaelyra\n",
+      "Player added: Earrl\n",
+      "Player added: Metonymy\n",
+      "Player added: Tawn\n",
+      "Player added: Stradlock\n",
+      "Player added: Vampyric\n",
+      "Player added: Velryssa\n",
+      "Player added: Illestra\n",
+      "Player added: Ayriea\n",
+      "Player added: Brian\n",
+      "Player added: Psychodruid\n",
+      "Collecting details for log PYArFRQJ9MCT6jXy\n",
+      "Player added: Petrol\n",
+      "Player added: Draigo\n",
+      "Player added: Shadowbaine\n",
+      "Player added: Illestra\n",
+      "Player added: Earrl\n",
+      "Player added: Ayriea\n",
+      "Player added: Velsummers\n",
+      "Player added: Psychodruid\n",
+      "Player added: Grombrindal\n",
+      "Player added: Vampyric\n",
+      "Player added: Stradlock\n",
+      "Player added: Brian\n",
+      "Player added: Metonymy\n",
+      "Player added: Vaelyra\n",
+      "Player added: Tawn\n",
+      "Player added: Velryssa\n",
+      "Player added: Kopyelock\n",
+      "Collecting details for log rMPLdKwCcH78Yz9q\n",
+      "Player added: Illestra\n",
+      "Player added: Psychodruid\n",
+      "Player added: Earrl\n",
+      "Player added: Velsummers\n",
+      "Player added: Draigo\n",
+      "Player added: Petrol\n",
+      "Player added: Kopyelock\n",
+      "Player added: Grombrindal\n",
+      "Player added: Velryssa\n",
+      "Player added: Ayriea\n",
+      "Collecting details for log rTPDJGpVXFZwNkA7\n",
+      "Player added: Stradlock\n",
+      "Player added: Illestra\n",
+      "Player added: Earrl\n",
+      "Player added: Velsummers\n",
+      "Player added: Vampyric\n",
+      "Player added: Petrol\n",
+      "Player added: Kopyelock\n",
+      "Player added: Ayriea\n",
+      "Player added: Tawn\n",
+      "Player added: Draigo\n",
+      "Player added: Grombrindal\n",
+      "Player added: Psychodruid\n",
+      "Player added: Shadowbaine\n",
+      "Player added: Brian\n",
+      "Player added: Velryssa\n",
+      "Player added: Metonymy\n",
+      "Collecting details for log vTWVFQfwcHztbnKL\n",
+      "Player added: Velsummers\n",
+      "Player added: Draigo\n",
+      "Player added: Metonymy\n",
+      "Player added: Stradlock\n",
+      "Player added: Psychodruid\n",
+      "Player added: Kopyelock\n",
+      "Player added: Tawn\n",
+      "Player added: Grombrindal\n",
+      "Player added: Earrl\n",
+      "Player added: Vampyric\n",
+      "Player added: Shadowbaine\n",
+      "Player added: Illestra\n",
+      "Player added: Velryssa\n",
+      "Player added: Ayriea\n",
+      "Player added: Petrol\n",
+      "Player added: Brian\n"
+     ]
+    }
+   ],
+   "source": [
+    "dunks = wl.buff_duration(api_key, master_list, 263372, boss_id=2122, buff=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>log_id</th>\n",
+       "      <th>spell_id</th>\n",
+       "      <th>player</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>uses</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9t1JjYfvbZkyWCGP</td>\n",
+       "      <td>263372</td>\n",
+       "      <td>Psychodruid</td>\n",
+       "      <td>149639</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9t1JjYfvbZkyWCGP</td>\n",
+       "      <td>263372</td>\n",
+       "      <td>Vaelyra</td>\n",
+       "      <td>190564</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9t1JjYfvbZkyWCGP</td>\n",
+       "      <td>263372</td>\n",
+       "      <td>Velryssa</td>\n",
+       "      <td>344994</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9t1JjYfvbZkyWCGP</td>\n",
+       "      <td>263372</td>\n",
+       "      <td>Earrl</td>\n",
+       "      <td>247773</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9t1JjYfvbZkyWCGP</td>\n",
+       "      <td>263372</td>\n",
+       "      <td>Draigo</td>\n",
+       "      <td>136339</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             log_id  spell_id       player  duration  uses\n",
+       "0  9t1JjYfvbZkyWCGP    263372  Psychodruid    149639    34\n",
+       "1  9t1JjYfvbZkyWCGP    263372      Vaelyra    190564    13\n",
+       "2  9t1JjYfvbZkyWCGP    263372     Velryssa    344994    25\n",
+       "3  9t1JjYfvbZkyWCGP    263372        Earrl    247773    28\n",
+       "4  9t1JjYfvbZkyWCGP    263372       Draigo    136339    21"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dunks.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soloers = ['Grombrindal', 'Velryssa', 'Vampyric', 'Vaelyra', 'Brian']\n",
+    "throwers = ['Ayriea', 'Velsummers', 'Kopyelock', 'Illestra', 'Metonymy', 'Tawn']\n",
+    "dunkers = ['Psychodruid', 'Earrl', 'Petrol', 'Draigo', 'Shadowbaine', 'Stradlock']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "player\n",
+       "Toy             4777.476190\n",
+       "Psychodruid     5199.013298\n",
+       "Shadowbaine     5353.751244\n",
+       "Velsummers      5390.137457\n",
+       "Ayriea          5634.787958\n",
+       "Kopyelock       6207.037288\n",
+       "Draigo          6304.125926\n",
+       "Tawn            6382.321739\n",
+       "Metonymy        6946.752336\n",
+       "Stradlock       6967.750000\n",
+       "Illestra        7273.197279\n",
+       "Petrol          8257.395683\n",
+       "Earrl           9108.320635\n",
+       "Vaelyra        10762.909091\n",
+       "Uuglei         12057.000000\n",
+       "Velryssa       12151.536278\n",
+       "Vampyric       13185.375000\n",
+       "Grombrindal    13580.955729\n",
+       "Brian          15554.350230\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "debuff_times = dunks.groupby('player')['duration'].sum()\\\n",
+    "               /dunks.groupby('player')['uses'].sum()\n",
+    "debuff_times.sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>thrower</th>\n",
+       "      <th>dunker</th>\n",
+       "      <th>av_t_duration</th>\n",
+       "      <th>av_d_duration</th>\n",
+       "      <th>combined_duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ayriea</td>\n",
+       "      <td>Psychodruid</td>\n",
+       "      <td>5634.787958</td>\n",
+       "      <td>5199.013298</td>\n",
+       "      <td>10833.801256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Metonymy</td>\n",
+       "      <td>Shadowbaine</td>\n",
+       "      <td>6946.752336</td>\n",
+       "      <td>5353.751244</td>\n",
+       "      <td>12300.503580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Tawn</td>\n",
+       "      <td>Stradlock</td>\n",
+       "      <td>6382.321739</td>\n",
+       "      <td>6967.750000</td>\n",
+       "      <td>13350.071739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Illestra</td>\n",
+       "      <td>Draigo</td>\n",
+       "      <td>7273.197279</td>\n",
+       "      <td>6304.125926</td>\n",
+       "      <td>13577.323205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Kopyelock</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>6207.037288</td>\n",
+       "      <td>8257.395683</td>\n",
+       "      <td>14464.432972</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Velsummers</td>\n",
+       "      <td>Earrl</td>\n",
+       "      <td>5390.137457</td>\n",
+       "      <td>9108.320635</td>\n",
+       "      <td>14498.458092</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      thrower       dunker  av_t_duration  av_d_duration  combined_duration\n",
+       "0      Ayriea  Psychodruid    5634.787958    5199.013298       10833.801256\n",
+       "4    Metonymy  Shadowbaine    6946.752336    5353.751244       12300.503580\n",
+       "5        Tawn    Stradlock    6382.321739    6967.750000       13350.071739\n",
+       "3    Illestra       Draigo    7273.197279    6304.125926       13577.323205\n",
+       "2   Kopyelock       Petrol    6207.037288    8257.395683       14464.432972\n",
+       "1  Velsummers        Earrl    5390.137457    9108.320635       14498.458092"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dunk_list = []\n",
+    "for thrower, dunker in zip(throwers, dunkers):\n",
+    "    dunk_list.append({\n",
+    "        'thrower': thrower,\n",
+    "        'dunker': dunker,\n",
+    "        'av_t_duration': debuff_times[thrower],\n",
+    "        'av_d_duration': debuff_times[dunker],\n",
+    "        'combined_duration': debuff_times[thrower] + debuff_times[dunker]\n",
+    "    })\n",
+    "\n",
+    "dunk_df = pd.DataFrame(dunk_list, \n",
+    "                       columns=['thrower', 'dunker', \n",
+    "                                'av_t_duration', 'av_d_duration', \n",
+    "                                'combined_duration'])\n",
+    "\n",
+    "dunk_df.sort_values('combined_duration')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dunks\n",
+    "dunk_df.to_csv('guild_awards/ghuun_dunk_pair_analysis.csv')"
+   ]
   }
  ],
  "metadata": {
